# Synthia

./: .env  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  SPEC.md  VIVADO_COMMANDS.md  arch.md  docker-compose.yml  pyproject.toml  test_worker.py
.github/workflows/: ci.yml
SynthiaUpdate/: PHASE0_HANDBOOK.md  PHASE10_HANDBOOK.md  PHASE11_HANDBOOK.md  PHASE1_HANDBOOK.md  PHASE2_HANDBOOK.md  PHASE3_HANDBOOK.md  PHASE4_HANDBOOK.md  PHASE5_HANDBOOK.md  PHASE8_HANDBOOK.md  PHASE9_HANDBOOK.md  phase1_route_baseline.txt  spec.md  update.md
apps/mcp/: claude-code-config.json  cursor-config.json  run.sh
configs/: default.yaml  vivado_2020_2.yaml
docker/: Dockerfile.web  Dockerfile.worker
docs/: DEPLOYMENT.md  MCP_USAGE.md  SPEC_DELTA_DEV_GUIDE.md  memory-system.md
docs/adr/: 0001-xpr-first-manifest-internal.md  0002-nextjs-not-now.md  0003-internal-python-connector-external-mcp.md  0004-auto-mode-with-tiered-approval.md  0005-sqlite-for-v1-postgres-later.md  0006-rtl-prompt-permissive-v1.md  _template.md
frontend/: README.md  index.html  login-mockup.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  (+1 more)
scripts/: dev.sh  phase1_split_api.py  playwright_sticky_check.py
tests/: __init__.py  conftest.py  test_agent_smoke.py  test_approval_apply.py  test_approval_bridge.py  test_approval_outcomes.py  test_assistant_stream.py  test_auth.py  test_batch_and_diff.py  test_benchmarks.py  test_benchmarks_api.py  test_capability_tools.py  test_command_runner.py  test_context_connector_blocks.py  test_context_offload.py  test_context_preview.py  test_db_abstraction.py  test_diagnose_api.py  test_diff_engine.py  test_e2e_cases.py  test_error_kb.py  test_event_envelope.py  test_events_persistence.py  test_evolution_api.py  test_evolution_eval.py  test_evolution_eval_api.py  test_evolution_foundation.py  test_evolution_generators.py  test_evolution_generators_api.py  test_evolution_generators_pr7.py  test_evolution_metrics.py  test_evolution_sandbox.py  test_evolution_sandbox_api.py  test_evolution_trials.py  test_evolution_trials_api.py  test_evolution_workflows.py  test_evolution_workflows_api.py  test_execute_with_steps_finally.py  test_execution_approval.py  test_file_patch_policy.py  (+72 more)
(+1916 files in other folders)
