[project]
name = "edagent-vivado"
version = "0.2.0"
description = "Vivado RTL Debug Agent — a LangChain-based multi-agent harness for Vivado RTL debugging"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "EDA Agent Engineering" }]
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "typer>=0.9",
    "rich>=13.0",
    "langchain>=0.3",
    "langchain-anthropic>=0.2",
    "langsmith>=0.1",
    "click>=8.0",
    "python-dotenv>=1.0",
    "fastapi>=0.100",
    "uvicorn>=0.22",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.0",
]
web = [
    "fastapi>=0.100",
    "uvicorn>=0.22",
]
ssh = [
    "paramiko>=3.0",
]
all = [
    "pytest>=7.0",
    "fastapi>=0.100",
    "uvicorn>=0.22",
    "paramiko>=3.0",
]

[project.scripts]
edagent = "edagent_vivado.cli:app"
edagent-web = "edagent_vivado.web.dashboard:start_server"

[tool.setuptools.packages.find]
where = ["src"]
